[project]
name = "energy-arbitrage-rl-cbf"
version = "0.1.0"
description = "Battery energy arbitrage RL replication with a CBF safety-filter extension."
requires-python = ">=3.12"
dependencies = [
  "gymnasium",
  "stable-baselines3",
  "torch",
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "pyyaml",
  "optuna",
]

[project.optional-dependencies]
dev = [
  "jupyter",
  "pytest",
  "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
